--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url("wild_flowers.png");
+    background-repeat: repeat;
+}
 .ribbonBannr div {
     background-color: rgb(247, 64, 123);
     box-sizing: border-box;
@@ -16,7 +20,30 @@ a.ribbonBannr:hover {
     text-decoration: none;
 }
 
-a.my-tool-tip, a.my-tool-tip:hover, a.my-tool-tip:visited {
+a.user, a.user:visited {
+    color: darkgrey;
+}
+a.user:hover {
+    color: grey;
+}
+.user {
+    font-size: 25px;
+}
 
-    color: red;
+a.cart, a.cart:visited {
+    color: darkgrey;
+}
+
+a.cart:hover {
+    color: grey;
+}
+
+.cart {
+    font-size: 25px;
+}
+
+.boxheader {
+    background-color: white;
+    width: auto;
+    height: 300px ;
 }
